# take-home-pay-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  learning.md  main.cpp  readme.md
include/: uk_tax_model.h
include/pay/: pay_item.h  payslip.h
include/tax/: tax_model.h  uk_tax_model.h
src/pay/: frequency.h  pay_item.cpp  pay_item.h  pay_itemp.cpp  payslip.cpp  payslip.h  totals.h
src/tax/: cumulative_tax_strategy.cpp  cumulative_tax_strategy.h  flat_tax_strategy.cpp  flat_tax_strategy.h  tax.h  tax_computation_strategy.h  tax_model.h  tax_registration.h  tax_registry.cpp  tax_registry.h
src/time/: frequency.h  period.h
src/uk/: pennies.h  uk_employee_ni.cpp  uk_employee_ni.h  uk_income_tax.cpp  uk_income_tax.h  uk_national_insurance.h  uk_pay_item_factory.cpp  uk_pay_item_factory.h  uk_tax_code.cpp  uk_tax_code.h  uk_tax_model.cpp  uk_tax_model.h  uk_tax_names.h  uk_tax_setup.cpp  uk_tax_setup.h
